# mdsa-tools

./: .gitignore  CAR_traj_view_replicates.py  CCU_G34_top_pc1  CCU_G34_top_pc1.csv  CCU_G34_top_pc2  CCU_G34_top_pc2.csv  CHANGELOG.md  Circos_example.py  Emb_clustering_revisit.ipynb  G34_CCU_Circos.py  G34_CCU_Hbonding_matrices_gen.py  G34_CCU_Hbonding_matrices_longrun.py  G34_CCU_Kmeans.py  G34_CCU_Kmeans_long.py  G34_CCU_PCA.py  G34_CCU_PCA_by_replicate.py  G34_CCU_PCA_long.py  G34_CCU_network_insight.py  G34_Heatmap.py  G34_Long_CCU_Kmeans.py  MANIFEST.in  Manipulating_orginal_arrays.py  P53Analysis.py  PCA_ranked_weights.csv  PDZ_analysis.py  README.md  SVM.py  bargraphs_butvscode.ipynb  bash_environment.yml  checking_notprocessed_estatics.py  database_Insights.py  environment.yml  exploring_embedding_space_example.py  importer.sh  kmeans_on_PCA.py  linux_environment.yml  new_viz.py  pairwise_Comparison_Analysis.py  pyproject.toml  setup.py  (+9 more)
PDBs/: CCU_CGU_10frames.mdcrd  CCU_GCU_10frames.mdcrd
TBD_v_v.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
enviornments/: README.md
examples/: Circos_example.py  analysis_example.py  datagen.py  importer.py  testing_new_analysis_example.py  testing_new_datagen.py  visualizing_kmeans_as_timeseries.py
luis_working/: Circos_example.py  testing_contourplots.ipynb
manuscript_explorations/: UMAP_embeddingspace_proper.py  embeddingspace_proper.py  new_fig3b.py  visualizing_kmeans_as_timeseries.py
mdsa_tools/: Analysis.py  Convenience.py  Viz.py
mdsa_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_systems/: filtered_CCU_CGU_Trajectory_array.npy  filtered_CCU_GCU_Trajectory_array.npy
utilities/: Analysis.py  Clustering.py  (+9 more)
(+121 files in other folders)
