[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdsa-tools"
version = "0.1.0"
description = "The Weir Labs H-bond Systems Analyses modules!"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name = "Luis Perez", email = "lperez@wesleyan.edu" }
]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "mdtraj==1.10.3",
  "umap-learn",
  "python-circos"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
